2007-09-18	Thomas Hempel	<thomas@typo3-unleashed.net>

	* Feature #5690: TCEforms: add inline editing of secondary options (thanks to Martin Ficzel)

2007-09-13  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 5701: linkHandler Hook Not Initialized Properly, patch supplied by Jeff Segars

2007-09-13	Thomas Hempel	<thomas@typo3-unleashed.net>

	* Feature #4064: Navigation title in tree view

2007-09-11  Ingo Renner  <ingo@typo3.org>

	* added romainian flag, fixes bug 6000
	* added fields crdate and cruser_id to tt_content

2007-09-10  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix problem with new t3lib_div::trimExplode()

2007-09-09  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Require PHP 5.1

2007-09-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Added Galician language to TYPO3

2007-09-06  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0alpha1

2007-09-07  Ingmar Schlecht  <ingmar@typo3.org>

	* Bugfix: Highlight root page in pagetree
	* Added .php6 and .php7 as denied file extensions in config_default.php to be future proof
	* Fixing uninitialized variables in class.t3lib_tceforms.php and class.tx_cssstyledcontent_pi1.php

2007-09-05  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fixed bug #4160: Moving content elements in frontent editing mode causes crash
	* Disable versioning in clickMenu if BE user doesn't have access to the versioning module

2007-09-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Feature #2883: improve t3lib_div::trimExplode()

2007-09-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Added Georgian language to TYPO3

2007-09-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a hook to TCEforms to enable custom evaluations for input fields

2007-09-03  Oliver Hader  <oh@inpublica.de>

	* (trivial) Moving t3lib_TCEforms_inline::getJSON() to t3lib_div::array2json()
	* (feature) Added feature #2830: imgResource doesn't support stdWrap on minW and minH